[gd_scene load_steps=10 format=2]

[ext_resource path="res://mocraAdventure/character_stats/progress_bars/background.png" type="Texture" id=1]
[ext_resource path="res://mocraAdventure/character_stats/progress_bars/Dam.png" type="Texture" id=2]
[ext_resource path="res://mocraAdventure/character_stats/background.png" type="Texture" id=3]
[ext_resource path="res://ubuntu150.tres" type="DynamicFont" id=4]
[ext_resource path="res://mocraAdventure/character_stats/progress_bars/ExL.png" type="Texture" id=5]
[ext_resource path="res://mocraAdventure/character_stats/progress_bars/Spd.png" type="Texture" id=6]
[ext_resource path="res://mocraAdventure/character_stats/Character_stats.gd" type="Script" id=7]
[ext_resource path="res://mocraAdventure/character_stats/progress_bars/HP.png" type="Texture" id=8]
[ext_resource path="res://fonts/ubuntu75.tres" type="DynamicFont" id=9]

[node name="Control" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [ 136.0, -93.0 ]
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="HPLabel" type="Label" parent="."]
margin_left = -124.0
margin_top = -108.0
margin_right = 73.0
margin_bottom = 61.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.168627, 0.192157, 0.25098, 1 )
custom_fonts/font = ExtResource( 4 )
text = "HP"

[node name="TextureProgress" type="TextureProgress" parent="HPLabel"]
margin_left = 266.667
margin_top = 40.0
margin_right = 866.667
margin_bottom = 140.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 8 )

[node name="ExLLabel" type="Label" parent="."]
margin_left = -130.0
margin_top = -66.0
margin_right = 111.0
margin_bottom = 103.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.168627, 0.192157, 0.25098, 1 )
custom_fonts/font = ExtResource( 4 )
text = "ExL"

[node name="TextureProgress" type="TextureProgress" parent="ExLLabel"]
margin_left = 286.667
margin_top = 40.0
margin_right = 886.667
margin_bottom = 140.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 5 )

[node name="SpdLabel" type="Label" parent="."]
margin_left = -130.0
margin_top = -28.0
margin_right = 126.0
margin_bottom = 141.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.168627, 0.192157, 0.25098, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Spd"

[node name="TextureProgress" type="TextureProgress" parent="SpdLabel"]
margin_left = 286.667
margin_top = 40.0
margin_right = 886.667
margin_bottom = 140.0
max_value = 5.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 6 )

[node name="DamLabel" type="Label" parent="."]
margin_left = -140.0
margin_top = 17.0
margin_right = 174.0
margin_bottom = 186.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.168627, 0.192157, 0.25098, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Dam"

[node name="TextureProgress" type="TextureProgress" parent="DamLabel"]
margin_left = 320.0
margin_top = 43.3333
margin_right = 920.0
margin_bottom = 143.333
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="TypeLabel" type="Label" parent="."]
margin_left = -52.5
margin_top = 59.0
margin_right = 52.5
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.168627, 0.192157, 0.25098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "NA"
